Update to fix build and tests after rebasing on main.
Also add the if clause to the newly generated omp.task op that
encloses the omp.target op.

--- a/mlir/lib/Dialect/OpenMP/Transforms/CMakeLists.txt
+++ b/mlir/lib/Dialect/OpenMP/Transforms/CMakeLists.txt
@@ -9,6 +9,7 @@ add_mlir_dialect_library(MLIROpenMPTransforms
 
   LINK_LIBS PUBLIC
   MLIROpenMPDialect
+  MLIRArithDialect
   MLIRFuncDialect
   MLIRIR
   MLIRPass
