--- a/utils/bazel/llvm-project-overlay/lldb/BUILD.bazel
+++ b/utils/bazel/llvm-project-overlay/lldb/BUILD.bazel
@@ -201,8 +201,8 @@ cc_library(
     srcs = glob([
         "source/API/**/*.cpp",
         "source/API/**/*.h",
-    ]) + [":lldb-sbapi-dwarf-enums"],
-    hdrs = glob(["include/lldb/API/**/*.h"]),
+    ]),
+    hdrs = glob(["include/lldb/API/**/*.h"]) + [":lldb-sbapi-dwarf-enums"],
     strip_include_prefix = "include",
     deps = [
         ":Breakpoint",
@@ -281,8 +281,8 @@ cc_library(
 
 cc_library(
     name = "Expression",
-    srcs = glob(["source/Expression/**/*.cpp"]) + [":lldb-sbapi-dwarf-enums"],
-    hdrs = glob(["include/lldb/Expression/**/*.h"]),
+    srcs = glob(["source/Expression/**/*.cpp"]),
+    hdrs = glob(["include/lldb/Expression/**/*.h"]) + [":lldb-sbapi-dwarf-enums"],
     strip_include_prefix = "include",
     deps = [
         ":Core",
@@ -358,8 +358,7 @@ cc_library(
 
 cc_library(
     name = "ExpressionHeaders",
-    srcs = [":lldb-sbapi-dwarf-enums"],
-    hdrs = glob(["include/lldb/Expression/**/*.h"]),
+    hdrs = glob(["include/lldb/Expression/**/*.h"]) + [":lldb-sbapi-dwarf-enums"],
     strip_include_prefix = "include",
     deps = ["//llvm:ExecutionEngine"],
 )
